<resources>
    <string name="app_name">FinalPomalima</string>
    <string name="titulo">REGISTRO DE NOTAS</string>
    <string name="frase">¡INICIAMOS UN NUEVO AÑO!</string>
    <string name="docente">¡BIENVENIDO DOCENTE!</string>

    <string name="inicio">INICIO DE SESIÓN DOCENTE</string>
    <string name="usuario">INGRESA CORREO:</string>
    <string name="contra">CONTRASEÑA:</string>
    <string name="btnIniDoc">INICIAR SESIÓN</string>
    <string name="txtinicio">MENÚ PRINCIPAL</string>
    <string name="materia">REGISTRO DE MATERIA</string>
    <string name="lismateria">LISTAR MATERIA</string>

    <string name="txtregistro">REGISTRAR MATERIA</string>
    <string name="nombreMateria">MATERIA:</string>
    <string name="nrc">NRC: </string>

    <string name="registrar">REGISTRAR</string>
    <string name="continuar">CONTINUAR</string>
    <string name="cancelar">CANCELAR</string>

    <string name="txtsubir">SUBIR LISTA</string>
    <string name="btnArchivo">SUBIR ARCHIVO</string>
    <string name="btnGuardar">GUARDAR</string>
    <string name="txtListaMateria">LISTA DE MATERIAS</string>

    <string name="txtRegNotas">REGISTRAR NOTAS</string>
    <string name="txtMotivo">MOTIVO:</string>
    <string name="btnAñadir">AÑADIR</string>
    <string name="btnRegresar">REGRESAR</string>
    <string name="btnVisualizarList">VISUALIZAR LISTA</string>
    <string name="btnVolver">VOLVER</string>

    <string name="txtListEstudiante">LISTA DE ESTUDIANTES</string>
    <string name="txtListNotas">LISTA DE NOTAS</string>
    <string name="txtNota">NOTA</string>
    <string name="txtNota1">NOTA:</string>
    <string name="txtdnialumno">DNI:</string>
    <string name="txtnombrealumno">NOMBRE:</string>
    <string name="cerrar">CERRAR SESION</string>
    <string name="txtObservacion">OBSERVACIÓN:</string>

    <string name="sesion_cerrada">Sesion Cerrada!</string>

    <string name="invalid_email">Ingrese email valido</string>
    <string name="invalid_pass">Ingrese el password mayor a 6 digitos</string>

    <string name="rellene_los_campos">Rellene todos los campos</string>
    <string name="registro_exitoso">Registro Exito</string>
    <string name="existe_nrc">Ya existe el NRC</string>

    <string name="permiso_accedido">Permisos accedido</string>
    <string name="permiso_no_accedido">Permiso NO ACCEDIDO!</string>

    <string name="elegir_archivo">Elije un archivo!</string>
    <string name="sin_materias">No tiene Materias Registradas!</string>

    <string name="rango_nota">Ingrese una nota entre 0 y 20</string>
    <string name="nota_registrada">Nota Registrada!</string>

</resources>