<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logindoc"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="center"
        ></ImageView>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="608dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="top|center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:gravity="center"
            android:text="@string/txtNota"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/txtNota1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/txtObservacion"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"></EditText>

        <Button
            android:id="@+id/btnAñadirNot"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btnredondear"
            android:text="@string/btnAñadir"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnRegresarNot"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btnredondear"
            android:text="@string/btnRegresar"
            android:textSize="20sp" />

    </LinearLayout>
</FrameLayout>