<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logindoc"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="center"
        ></ImageView>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="609dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="top|center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:gravity="center"
            android:text="@string/txtregistro"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nombreMateria"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtRegMateria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nrc"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtRegNrc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btnRegistrarMat"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btnredondear"
                android:text="@string/registrar"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnCancelarMat"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btnredondear"
                android:text="@string/cancelar"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>