<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logindoc"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="center"
        ></ImageView>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="530dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="top|center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:gravity="center"
            android:text="@string/txtsubir"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnSubir"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btnredondear"
            android:text="@string/btnArchivo"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/archivo"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_margin="50dp"
            />

        <Button
            android:id="@+id/btnGuardarSuLista"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#23C0CD"
            android:text="@string/btnGuardar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnCancelarSuLista"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#23C0CD"
            android:text="@string/cancelar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />


    </LinearLayout>
</FrameLayout>