<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logindoc"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="center"
        ></ImageView>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="530dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="top|center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:gravity="center"
            android:text="@string/inicio"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/usuario"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtEmailDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            ></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/contra"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtPassDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_margin="20dp"
            />

        <Button
            android:id="@+id/btnDocLogin"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#23C0CD"
            android:text="@string/btnIniDoc"
            android:textSize="20sp"
            app:cornerRadius="20dp" />


    </LinearLayout>
</FrameLayout>