<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="center"
        ></ImageView>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="595dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="top|center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="@string/txtinicio"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgSplashLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/inicio"></ImageView>

        <Button
            android:id="@+id/btnRegMateria"
            android:layout_width="273dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/btnredondear"
            android:gravity="center"
            android:text="@string/materia"
            android:textSize="15sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnListarMateria"
            android:layout_width="273dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btnredondear"
            android:gravity="center"
            android:text="@string/lismateria"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="273dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btnredondear"
            android:gravity="center"
            android:text="@string/cerrar"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>
</FrameLayout>