<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splashdoc"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="center"
        ></ImageView>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado_splash"
        ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgSplashLogo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_colegio"
                android:layout_margin="50dp"
                ></ImageView>


            <TextView
                android:id="@+id/txtdocente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_margin="15dp"
                ></TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50sp"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="9"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/frase"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/docente"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                ></TextView>


        </LinearLayout>

    </LinearLayout>
</FrameLayout>